--- a/test-service.yml
+++ b/test-service.yml
@@ -4,10 +4,9 @@ metadata:
   name: testsvc
   labels:
     feladat.banzaicloud.io/ingress: secure
-    cica: mica
   annotations:
-    domain: example.com
-    email: test@example.com
+    domain: ug0jcqu276koi.spotguidetest.beta.banzaicloud.io
+    email: janos.sarusikis@gmail.com 
 spec:
   selector:
     app: MyApp
