Change annotations const names and add environment label for let's encrypt url selection.

--- a/test-service.yml
+++ b/test-service.yml
@@ -4,6 +4,7 @@ metadata:
   name: testsvc
   labels:
     feladat.banzaicloud.io/ingress: secure
+    environment: staging
   annotations:
     domain: example.com
     email: janos.sarusikis@gmail.com 
